2009-01-05  Ulrich Mueller  <ulm@gentoo.org>

	* Makefile (PV): Extract PV from lisp instead of ChangeLog, so
	that I won't forget updating it anymore (it was wrong in 1.10).

	* gentoo-syntax.el: Update version number and copyright years.
	(ebuild-mode-menu): Define variable to avoid a compiler warning.
	(ebuild-mode-ekeyword-complete): Account for completion-boundaries
	of Emacs 23.

2009-01-04  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el: join the two independent kde function
	definitions

2008-12-30  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-java-utils-2):
	Add EANT_NEEDS_TOOLS variable

2008-12-27  Ulrich Mueller  <ulm@gentoo.org>

	* Version 1.10 released.

2008-11-14  Christian Faulhammer  <opfer@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-gems):
	Add gems.eclass' functions

2008-10-29  Ulrich Mueller  <ulm@gentoo.org>

	* gentoo-syntax.el (ebuild-mode-font-lock-keywords)
	(eselect-mode-font-lock-keywords): Move definitions from
	{ebuild,eselect}-mode-keywords.el to here to avoid warnings
	during byte-compilation.

2008-10-27  Christian Faulhammer  <opfer@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-python):
	add python_need_rebuild function
	(ebuild-mode-keywords-autotools): add WANT_AUTOCONF and
	WANT_AUTOMAKE variables
	(ebuild-mode-keywords-gnome2): add DOCS variable

2008-10-23  Ulrich Mueller  <ulm@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-font-lock-keywords):
	Determine list of variables from obarray.

	* eselect-mode-keywords.el (eselect-mode-font-lock-keywords):
	Likewise.

2008-10-22  Ulrich Mueller  <ulm@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Move face
	definitions to individual variables.
	(ebuild-mode-font-lock-keywords): New variable; move actual call
	of font-lock-add-keywords to gentoo-syntax.el.

	* eselect-mode-keywords.el (eselect-mode-keywords-*)
	(eselect-mode-font-lock-keywords): Likewise.
